--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "课件工具",
   "main": "app/main/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run start:render\" \"wait-on http://localhost:3000 && npm run start:main\" ",
     "start:main": "electron .",
-    "start:render": "cd app/renderer/src/main && npm start"
+    "start:render": "cd app/renderer/src/main && cross-env BROWSER=none npm start"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^6.2.0",
-    "electron": "^13.1.2",
+    "cross-env": "^7.0.3",
+    "electron": "^12.0.11",
     "wait-on": "^5.3.0"
+  },
+  "dependencies": {
+    "electron-is-dev": "^2.0.0"
   }
 }
