--- a/app/renderer/src/main/package.json
+++ b/app/renderer/src/main/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.16.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -22,7 +23,26 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "import/no-anonymous-default-export": [
+        "error",
+        {
+          "allowArray": false,
+          "allowArrowFunction": true,
+          "allowAnonymousClass": false,
+          "allowAnonymousFunction": false,
+          "allowCallExpression": true,
+          "allowLiteral": false,
+          "allowObject": false
+        }
+      ],
+      "no-unused-vars": [
+        "error"
+      ],
+      "react-hooks/exhaustive-deps": "off",
+      "jsx-a11y/anchor-is-valid": "off"
+    }
   },
   "browserslist": {
     "production": [
