--- a/app/renderer/src/main/package.json
+++ b/app/renderer/src/main/package.json
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@loadable/component": "^5.15.0",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "less": "^4.1.1",
